# pantra-backend

./: README.md  pyproject.toml
app/: main.py
app/core/: config.py  logging.py  prompt.py
app/models/: pantry.py
app/routers/: health.py  pantry.py  recipe.py
app/services/: auth.py  embeddings.py  pantry.py  rag.py  supabase.py  vector_store.py
app/services/tools/: generate_query.py  other_tools.py  retrival_tool.py
tests/: test_rag.py
